src/parser_super_flat/snapshots/simp__parser_super_flat__tests__tests__inputs__valid__stmt_fn_nested_fn.snap
---
source: src/parser_super_flat/tests.rs
expression: parse(&input)
---
StmtFn {
    name: ExprIdent(
        "outer",
    ),
    body: ExprBlock {
        tail: None,
        body: [
            StmtFn {
                name: ExprIdent(
                    "inner",
                ),
                body: ExprBlock {
                    tail: None,
                    body: [],
                },
                params: [],
            },
        ],
    },
    params: [],
}
