src/parser_super_flat/snapshots/simp__parser_super_flat__tests__tests__inputs__valid__stmt_let.snap
---
source: src/parser_super_flat/tests.rs
expression: parse(&input)
---
StmtLet {
    name: ExprIdent(
        "v",
    ),
    value: ExprInt(
        0,
    ),
}
